# pyproject.toml
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

# project metadata

[project]
name = "ppmpy"
description = "A PPM hydrodynamics solver written in python"
readme = "README.md"
license.text = "BSD"
authors = [
  {name="Michael Zingale"},
  {email="michael.zingale@stonybrook.edu"},
]
dynamic = ["version"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/zingale/ppmpy"


# packaging

[tool.setuptools]
zip-safe = false
# we explicitly list the data we want below
include-package-data = false

[tool.setuptools.packages.find]
include = ["ppmpy*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "post-release"
version_file = "ppmpy/_version.py"


# development tools

[tool.pylint.MAIN]
ignore-patterns = "flycheck*,_version.py"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
]
enable = ["useless-suppression"]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "asyncSetUp",
  "__post_init__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.TYPECHECK]
generated-members = ["viridis", "bwr"]
# see https://github.com/PyCQA/pylint/issues/2289 for the generated-members


[tool.codespell]
skip = ".git"
